# f1_data_visualization

./: .gitignore  fetch_all_session_data.py  fetch_all_weather_data.py  fetch_championship.py  main.py  pyproject.toml  transform_data.py  weather_eda2.ipynb
data/: fetch_data.py  fetch_drivers.py  fetch_laps_updated.py  fetch_pitstops.py  monza_data.py
docs/: workflow_guide
drivers_data/: constants.py  drivers_eda.py  drivers_storytelling.ipynb  drivers_test.ipynb
eda_notebooks/: EDA_INDIRA_pit_duration.ipynb  EDA_INDIRA_tire_strategy.ipynb  EDA_storytelling_Indira.ipynb  FILIP_weather_eda.ipynb  eda_pitstops_monza._indira.ipynb  julius_eda.ipynb  weather_eda.ipynb
utils/: openf1.py  test_api.py
