[project]
name = "f1-data-visualization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.1",
    "ipykernel>=7.2.0",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "matplotlib>=3.8.0",
    "plotly>=6.6.0",
    "streamlit>=1.55.0",
]